--- a/backend/package.json
+++ b/backend/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "prisma generate && next build",
-    "build:deploy": "prisma generate && prisma migrate deploy && next build",
-    "start": "next start -p 3001",
+    "build:deploy": "prisma generate && (if [ -n \"$DATABASE_URL\" ]; then prisma migrate deploy; else echo '⚠️  DATABASE_URL not set, skipping migrations'; fi) && next build",
+    "build:local": "prisma generate && next build",
+    "start": "next start -p ${PORT:-3001}",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -20,7 +21,8 @@
     "react-dom": "^18.3.1",
     "@prisma/client": "^5.19.0",
     "zod": "^3.23.8",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@types/node": "^20",
