Complete backend setup with Brevo email integration
- Add Brevo email integration for transactional emails
- Add Waitlist model for invite system
- Create waitlist API endpoints (add, invite, verify)
- Update email setup documentation
- Fix Next.js 15 route handler params

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,8 @@
     "@prisma/client": "^5.19.0",
     "zod": "^3.23.8",
     "jsonwebtoken": "^9.0.2",
-    "@supabase/supabase-js": "^2.39.0"
+    "@supabase/supabase-js": "^2.39.0",
+    "@getbrevo/brevo": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
