--- a/backend/package.json
+++ b/backend/package.json
@@ -2,6 +2,10 @@
   "name": "reo-backend",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
+  },
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "prisma generate && next build",
@@ -22,8 +26,7 @@
     "@prisma/client": "^5.19.0",
     "zod": "^3.23.8",
     "jsonwebtoken": "^9.0.2",
-    "@supabase/supabase-js": "^2.39.0",
-    "@getbrevo/brevo": "^1.0.0"
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "@types/node": "^20",
