--- a/backend/package.json
+++ b/backend/package.json
@@ -20,23 +20,25 @@
     "db:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "@types/form-data": "^2.2.1",
+    "form-data": "^4.0.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "^15.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@prisma/client": "^5.19.0",
-    "zod": "^3.23.8",
-    "jsonwebtoken": "^9.0.2",
-    "@supabase/supabase-js": "^2.39.0"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/jsonwebtoken": "^9.0.6",
-    "prisma": "^5.19.0",
-    "typescript": "^5",
-    "tsx": "^4.19.0",
     "eslint": "^8",
-    "eslint-config-next": "^15.0.0"
+    "eslint-config-next": "^15.0.0",
+    "prisma": "^5.19.0",
+    "tsx": "^4.19.0",
+    "typescript": "^5"
   }
 }
