--- a/mobile/package.json
+++ b/mobile/package.json
@@ -11,25 +11,32 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@supabase/supabase-js": "^2.39.0",
     "expo": "~52.0.0",
+    "expo-asset": "~11.0.0",
+    "expo-av": "^16.0.7",
+    "expo-constants": "~17.0.0",
+    "expo-file-system": "^19.0.17",
+    "expo-linear-gradient": "^15.0.7",
+    "expo-linking": "~7.0.0",
     "expo-router": "~4.0.0",
+    "expo-secure-store": "~14.0.1",
     "expo-status-bar": "~2.0.0",
+    "nativewind": "^4.0.0",
     "react": "18.3.1",
-    "react-native": "0.76.5",
+    "react-native": "0.76.9",
+    "react-native-gesture-handler": "^2.29.1",
+    "react-native-reanimated": "~3.16.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "@supabase/supabase-js": "^2.39.0",
-    "expo-secure-store": "~13.0.0",
-    "expo-linking": "~7.0.0",
-    "expo-constants": "~17.0.0",
-    "nativewind": "^4.0.0",
-    "react-native-reanimated": "~3.16.0"
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.25.0",
     "@types/react": "~18.3.0",
-    "typescript": "^5.3.0",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.0"
   },
   "private": true
 }
