--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "dev": "next dev -p 3001",
+    "dev:network": "next dev -p 3001 -H 0.0.0.0",
     "build": "prisma generate && next build",
     "build:deploy": "prisma generate && (if [ -n \"$DATABASE_URL\" ]; then prisma migrate deploy; else echo '⚠️  DATABASE_URL not set, skipping migrations'; fi) && next build",
     "build:local": "prisma generate && next build",
